# we-os

./: CLAUDE.md  CONTEXT.md  README.md  USAGE.md  WORKFLOW.md
.claude/: settings.json
.claude/agents/: brand-strategy.md  creative-asset-prompt.md  creative-director.md  market-research.md  performance-marketing.md
.claude/rules/: customer-dna.md  decision-hierarchy.md  operating-principles.md
.marketing_os/: memory.sqlite3
.scratch/slug-scoped-writes/: 01-reject-off-slug-writes.md
agent-harness/: .gitignore  Makefile  README.md  TODO.md  USAGE.md  example.env  pyproject.toml
agent-harness/marketing_os/: __init__.py  _compat.py  cli.py  config.py  errors.py  model.py  orchestrator.py  pipeline.py  runstate.py  schemas.py  types.py
agent-harness/marketing_os/agents/: __init__.py  agents.yaml  builder.py  loader.py  registry.py  specialist.py
agent-harness/marketing_os/agents/prompts/: asset_prompts.md  campaign_strategy.md  creative.md  evaluator.md  execution.md  intake.md  media.md  performance.md  research.md  strategy.md
agent-harness/marketing_os/api/: __init__.py  app.py
agent-harness/marketing_os/governance/: __init__.py  gate.py  pipeline.py  review.py  rules.py
agent-harness/marketing_os/guardrails/: __init__.py  callbacks.py  hard.py  review.py
agent-harness/marketing_os/loop/: __init__.py  base.py  default.py  hooks.py
agent-harness/marketing_os/memory/: __init__.py  service.py
agent-harness/marketing_os/providers/: __init__.py  _chat_base.py  anthropic_provider.py  base.py  deepseek_provider.py  openai_provider.py
agent-harness/marketing_os/tools/: __init__.py  approval.py  browser.py  filesystem.py  memory_tools.py  registry.py  websearch.py  websearch_playwright.py
agent-harness/src/marketing_os/: __init__.py  config.py  errors.py  ports.py  schemas.py
agent-harness/src/marketing_os/adapters/: __init__.py  models.py  observability.py  review.py
agent-harness/src/marketing_os/adapters/observability/: __init__.py  console.py  runlog.py  tracing.py
agent-harness/src/marketing_os/adapters/tools/: __init__.py  filesystem.py  sandbox.py  websearch.py  websearch_fallback.py  websearch_playwright.py  websearch_tavily.py
agent-harness/src/marketing_os/agents/: __init__.py  loader.py  middleware.py  spec_source.py  specialist.py
agent-harness/src/marketing_os/entrypoints/: __init__.py  cli.py  env.py
agent-harness/src/marketing_os/entrypoints/api/: app.py
agent-harness/src/marketing_os/governance/: __init__.py  gate.py  pipeline.py  rubric.py  rules.py
agent-harness/src/marketing_os/graph/: __init__.py  graph.py  nodes.py  registry.py  runner.py  state.py
agent-harness/tests/: conftest.py  test_api.py  test_browser.py  test_cancellation.py  test_cli.py  test_compat.py  test_entrypoint_env.py  test_errors.py  test_gate.py  test_graph.py  test_guardrails.py  test_loader.py  test_loop.py  test_models.py  test_observability.py  test_pipeline.py  test_pipeline_build.py  test_registry.py  test_review.py  test_run_registry.py  test_runner_checkpoint.py  test_runstate.py  test_sandbox.py  test_schemas.py  test_spec_source.py  test_websearch.py  test_websearch_tavily.py
customers/: README.md
docs/agents/: domain.md  (+1 more)
guardrails/: README.md  asset-prompts.md  brand-strategy.md  campaign-strategy.md  creative-brief.md  performance-plan.md  research.md  shared.md
knowledge/: README.md
templates/: campaign-goal.md  customer-dna.md
(+84 files in other folders)
