[project]
name = "marketing-os"
version = "0.2.0"
description = "ADK-native, coordinator-led multi-agent marketing OS (DeepSeek primary via LiteLLM)."
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.0",
    "litellm>=1.40",
    "playwright>=1.44",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
marketing-os = "marketing_os.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["marketing_os"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
