[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marketing-os"
version = "0.2.0"
description = "LangGraph agent application for the Marketing OS decision pipeline."
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.0",
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langchain-deepseek>=0.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=1.0"]
openai = ["langchain-openai>=1.0"]
postgres = ["langgraph-checkpoint-postgres>=2.0", "psycopg[binary]>=3.2"]
playwright = ["playwright>=1.44"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
]

[project.scripts]
marketing-os = "marketing_os.entrypoints.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["marketing_os*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["marketing_os"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["langgraph.*", "langchain_deepseek.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["marketing_os.graph.graph"]
disable_error_code = ["call-overload"]
